// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: text transform > consecutive text 1`] = `
"
  const n0 = _createNodes(() => (msg))
  return n0
"
`;

exports[`compiler: text transform > no consecutive text 1`] = `
"
  const n0 = _createNodes("hello world")
  return n0
"
`;

exports[`compiler: text transform > text like 1`] = `
"
  const n0 = t0()
  return n0
"
`;
